Index: use sortable tables

--- a/css/admin.less
+++ b/css/admin.less
@@ -1,11 +1,5 @@
-.table {
-  margin: 10px auto;
-  th, td {
-    text-align: center;
-  }
-  th:first-child, td:first-child {
-    text-align: left;
-  }
+@import "table";
+.table-sortable {
   tr:not(.deleted) {
     .deleted-only {
       display: none;
