--- a/css/index.less
+++ b/css/index.less
@@ -1,8 +1,10 @@
 @import "mixins";
+@import "table";
 
-tfoot td {
-  font-size: small;
-  text-align: center;
+#table-algorithms {
+  .tags {
+    max-width: 250px;
+  }
 }
 
 .tagcloud {
