--- a/partials/index.phtml
+++ b/partials/index.phtml
@@ -3,79 +3,103 @@ if (!defined('BASEDIR')) die('You cannot call this script directly !');
 global $l10n;
 require_once BASEDIR . "includes/viewHelper.php";
 
-$list = isset($_GET['list']) ? $_GET['list'] : false;
+$_tabs = [
+    'overview' => 'overview',
+    'users' => 'users',
+    'algorithms' => 'algorithms',
+    'tags' => 'tags'
+];
+$_tab = isset($_GET['tab']) && array_key_exists($_GET['tab'], $_tabs) ? $_GET['tab'] : 'overview';
 ?>
-<?php if ($list === "algorithms"): ?>
-    <?php
-    $latestAlgorithms = $__model->fetchLatestAlgorithms(250);
-    ?>
+    <!-- NAVIGATION MENU FOR INDEX -->
+    <ul class="nav nav-tabs">
+        <li role="presentation"<?php if ($_tab === 'overview'): ?> class="active"<?php endif ?>>
+            <a href="<?= url(['action' => 'index', 'tab' => 'overview']) ?>">
+                <?= $l10n['overview'] ?>
+            </a>
+        </li>
+        <li role="presentation"<?php if ($_tab === 'users'): ?> class="active"<?php endif ?>>
+            <a href="<?= url(['action' => 'index', 'tab' => 'users']) ?>">
+                <?= $l10n['users'] ?>
+            </a>
+        </li>
+        <li role="presentation"<?php if ($_tab === 'algorithms'): ?> class="active"<?php endif ?>>
+            <a href="<?= url(['action' => 'index', 'tab' => 'algorithms']) ?>">
+                <?= $l10n['algorithms'] ?>
+            </a>
+        </li>
+        <li role="presentation"<?php if ($_tab === 'tags'): ?> class="active"<?php endif ?>>
+            <a href="<?= url(['action' => 'index', 'tab' => 'tags']) ?>">
+                <?= $l10n['tags'] ?>
+            </a>
+        </li>
+    </ul>
+<?php if ($_tab === "algorithms"): ?>
     <!-- HEADER -->
     <div class="page-header">
         <h1><?= $l10n['index'] ?>
-            <small><?= $l10n['latest_algos'] ?></small>
+            <small><?= $l10n['algorithms'] ?></small>
         </h1>
     </div>
     <!-- CONTENT -->
-    <table class="table table-striped table-hover algorithms">
-        <?php if ($latestAlgorithms):
+    <table id="table-algorithms" class="table table-sortable">
+        <?php if ($algorithms = $__model->fetchAlgorithms(false)):
             $transKeys = ['created_at', 'created_note'];
             $userData = true;
-            foreach ($latestAlgorithms as $algorithm) {
-                require(BASEDIR . 'partials/partials/item_algorithm.phtml');
-            }
-        else: ?>
+            ?>
+            <thead>
+            <tr>
+                <th><?= $l10n['algorithm'] ?></th>
+                <th><?= $l10n['tags'] ?></th>
+                <th><?= $l10n['owner'] ?></th>
+                <th><?= $l10n['creation'] ?></th>
+                <th><?= $l10n['last_edit'] ?></th>
+            </tr>
+            </thead>
+            <tbody>
+            <?php foreach ($algorithms as $algorithm): ?>
+                <?php require(BASEDIR . 'partials/partials/item_algorithm.phtml') ?>
+            <?php endforeach ?>
+            </tbody>
+            <?php $colCount = 5;
+            require(BASEDIR . 'partials/partials/table_foot.phtml') ?>
+        <?php else: ?>
             <tr>
                 <td><?= $l10n['no_algorithms'] ?></td>
             </tr>
         <?php endif ?>
     </table>
-<?php elseif ($list === "changes"): ?>
-    <?php
-    $lastChanges = $__model->fetchModifiedAlgorithms(250);
-    ?>
+<?php elseif ($_tab === 'users'): ?>
     <!-- HEADER -->
     <div class="page-header">
         <h1><?= $l10n['index'] ?>
-            <small><?= $l10n['last_changes'] ?></small>
+            <small><?= $l10n['users'] ?></small>
         </h1>
     </div>
     <!-- CONTENT -->
-    <table class="table table-striped table-hover algorithms">
-        <?php if ($lastChanges):
-            $transKeys = ['modified_at', 'modified_note'];
-            $userData = true;
-            foreach ($lastChanges as $algorithm) {
-                require(BASEDIR . 'partials/partials/item_algorithm.phtml');
-            }
-        else: ?>
+    <table id="table-users" class="table table-sortable">
+        <?php if ($users = $__model->fetchUsers(false)): ?>
+            <thead>
             <tr>
-                <td><?= $l10n['no_algorithms'] ?></td>
+                <th><?= $l10n['user'] ?></th>
+                <th title="<?= $l10n['number_of_algorithms'] ?>"><?= $l10n['algorithms'] ?></th>
+                <th><?= $l10n['registration'] ?></th>
             </tr>
-        <?php endif ?>
-    </table>
-<?php elseif ($list === 'users'): ?>
-    <?php
-    $diligentUsers = $__model->fetchUsersWithMostAlgorithms(250);
-    ?>
-    <!-- HEADER -->
-    <div class="page-header">
-        <h1><?= $l10n['index'] ?>
-            <small><?= $l10n['diligent_users'] ?></small>
-        </h1>
-    </div>
-    <!-- CONTENT -->
-    <table class="table table-striped table-hover algorithms">
-        <?php if ($diligentUsers):
-            foreach ($diligentUsers as $user){
-                require(BASEDIR . 'partials/partials/item_user.phtml');
-            }
-        else: ?>
+            </thead>
+            <tbody>
+            <? foreach ($users as $user): ?>
+                <?php require(BASEDIR . 'partials/partials/item_user.phtml') ?>
+            <?php endforeach ?>
+            </tbody>
+            <?php $colCount = 3;
+            require(BASEDIR . 'partials/partials/table_foot.phtml') ?>
+        <?php else: ?>
             <tr>
                 <td><?= $l10n['no_users'] ?></td>
             </tr>
         <?php endif ?>
     </table>
-<?php elseif ($list === 'tag' && isset($_GET['tag'])): ?>
+<?php elseif ($_tab === 'tags' && isset($_GET['tag'])): ?>
     <?php
     $tag = $_GET['tag'];
     $algorithms = $__model->fetchAlgorithmsByTag($tag);
@@ -92,7 +116,7 @@ $list = isset($_GET['list']) ? $_GET['list'] : false;
             $transKeys = ['created_at', 'created_note'];
             $userData = true;
             foreach ($algorithms as $algorithm) {
-                require(BASEDIR . 'partials/partials/item_algorithm.phtml');
+                require(BASEDIR . 'partials/partials/item_algorithm_compact.phtml');
             }
         else: ?>
             <tr>
@@ -100,7 +124,7 @@ $list = isset($_GET['list']) ? $_GET['list'] : false;
             </tr>
         <?php endif ?>
     </table>
-<?php elseif ($list === 'tag'): ?>
+<?php elseif ($_tab === 'tags'): ?>
     <?php
     $tags = $__model->fetchTagStats(150);
     ?>
@@ -114,54 +138,6 @@ $list = isset($_GET['list']) ? $_GET['list'] : false;
     <div class="tagcloud tagcloud-background">
         <?php require(BASEDIR . 'partials/partials/tagcloud.phtml') ?>
     </div>
-<?php elseif ($__uid && $list === 'myAlgorithms'): ?>
-    <?php
-    $my_algorithms = $__model->fetchAlgorithmsOfUser($__uid, true, 250);
-    ?>
-    <!-- HEADER -->
-    <div class="page-header">
-        <h1><?= $l10n['index'] ?>
-            <small><?= $l10n['my_algos'] ?></small>
-        </h1>
-    </div>
-    <!-- CONTENT -->
-    <table class="table table-striped table-hover algorithms">
-        <?php if (isset($my_algorithms) && $my_algorithms):
-            $transKeys = ['created_at', 'created_note'];
-            $userData = false;
-            foreach ($my_algorithms as $algorithm) {
-                require(BASEDIR . 'partials/partials/item_algorithm.phtml');
-            }
-        else: ?>
-            <tr>
-                <td><?= $l10n['no_algorithms'] ?></td>
-            </tr>
-        <?php endif ?>
-    </table>
-<?php elseif ($__uid && $list === 'myChanges'): ?>
-    <?php
-    $my_changes = $__model->fetchModifiedAlgorithmsOfUser($__uid, 250);
-    ?>
-    <!-- HEADER -->
-    <div class="page-header">
-        <h1><?= $l10n['index'] ?>
-            <small><?= $l10n['my_last_changes'] ?></small>
-        </h1>
-    </div>
-    <!-- CONTENT -->
-    <table class="table table-striped table-hover algorithms">
-        <?php if (isset($my_changes) && $my_changes):
-            $transKeys = ['modified_at', 'modified_note'];
-            $userData = false;
-            foreach ($my_changes as $algorithm) {
-                require(BASEDIR . 'partials/partials/item_algorithm.phtml');
-            }
-        else: ?>
-            <tr>
-                <td><?= $l10n['no_algorithms'] ?></td>
-            </tr>
-        <?php endif ?>
-    </table>
 <?php else: ?>
     <?php
     $latestAlgorithms = $__model->fetchLatestAlgorithms(MAX_NUMBER_OF_ENTRIES);
@@ -194,7 +170,7 @@ $list = isset($_GET['list']) ? $_GET['list'] : false;
                     $transKeys = ['created_at', 'created_note'];
                     $userData = true;
                     foreach ($latestAlgorithms as $algorithm) {
-                        require(BASEDIR . 'partials/partials/item_algorithm.phtml');
+                        require(BASEDIR . 'partials/partials/item_algorithm_compact.phtml');
                     }
                 else: ?>
                     <tr>
@@ -202,13 +178,6 @@ $list = isset($_GET['list']) ? $_GET['list'] : false;
                     </tr>
                 <?php endif ?>
                 </tbody>
-                <tfoot>
-                <tr>
-                    <td>
-                        (<a href="<?= url(['action' => 'index', 'list' => 'algorithms']) ?>"><?= $l10n['see_more'] ?></a>)
-                    </td>
-                </tr>
-                </tfoot>
             </table>
         </div>
         <div class="col-md-4">
@@ -224,7 +193,7 @@ $list = isset($_GET['list']) ? $_GET['list'] : false;
                     $transKeys = ['modified_at', 'modified_note'];
                     $userData = true;
                     foreach ($lastChanges as $algorithm) {
-                        require(BASEDIR . 'partials/partials/item_algorithm.phtml');
+                        require(BASEDIR . 'partials/partials/item_algorithm_compact.phtml');
                     }
                 else: ?>
                     <tr>
@@ -232,12 +201,6 @@ $list = isset($_GET['list']) ? $_GET['list'] : false;
                     </tr>
                 <?php endif ?>
                 </tbody>
-                <tfoot>
-                <tr>
-                    <td>(<a href="<?= url(['action' => 'index', 'list' => 'changes']) ?>"><?= $l10n['see_more'] ?></a>)
-                    </td>
-                </tr>
-                </tfoot>
             </table>
         </div>
         <div class="col-md-4">
@@ -251,7 +214,7 @@ $list = isset($_GET['list']) ? $_GET['list'] : false;
                 <tbody>
                 <?php if ($diligentUsers):
                     foreach ($diligentUsers as $user) {
-                        require(BASEDIR . 'partials/partials/item_user.phtml');
+                        require(BASEDIR . 'partials/partials/item_user_compact.phtml');
                     }
                 else: ?>
                     <tr>
@@ -259,12 +222,6 @@ $list = isset($_GET['list']) ? $_GET['list'] : false;
                     </tr>
                 <?php endif ?>
                 </tbody>
-                <tfoot>
-                <tr>
-                    <td>(<a href="<?= url(['action' => 'index', 'list' => 'users']) ?>"><?= $l10n['see_more'] ?></a>)
-                    </td>
-                </tr>
-                </tfoot>
             </table>
         </div>
     </div>
@@ -283,7 +240,7 @@ $list = isset($_GET['list']) ? $_GET['list'] : false;
                         $transKeys = ['created_at', 'created_note'];
                         $userData = false;
                         foreach ($my_algorithms as $algorithm) {
-                            require(BASEDIR . 'partials/partials/item_algorithm.phtml');
+                            require(BASEDIR . 'partials/partials/item_algorithm_compact.phtml');
                         }
                     else: ?>
                         <tr>
@@ -291,13 +248,6 @@ $list = isset($_GET['list']) ? $_GET['list'] : false;
                         </tr>
                     <?php endif ?>
                     </tbody>
-                    <tfoot>
-                    <tr>
-                        <td>
-                            (<a href="<?= url(['action' => 'index', 'list' => 'myAlgorithms']) ?>"><?= $l10n['see_more'] ?></a>)
-                        </td>
-                    </tr>
-                    </tfoot>
                 </table>
             </div>
             <div class="col-md-4">
@@ -313,7 +263,7 @@ $list = isset($_GET['list']) ? $_GET['list'] : false;
                         $transKeys = ['modified_at', 'modified_note'];
                         $userData = false;
                         foreach ($my_changes as $algorithm) {
-                            require(BASEDIR . 'partials/partials/item_algorithm.phtml');
+                            require(BASEDIR . 'partials/partials/item_algorithm_compact.phtml');
                         }
                     else: ?>
                         <tr>
@@ -321,13 +271,6 @@ $list = isset($_GET['list']) ? $_GET['list'] : false;
                         </tr>
                     <?php endif ?>
                     </tbody>
-                    <tfoot>
-                    <tr>
-                        <td>
-                            (<a href="<?= url(['action' => 'index', 'list' => 'myChanges']) ?>"><?= $l10n['see_more'] ?></a>)
-                        </td>
-                    </tr>
-                    </tfoot>
                 </table>
             </div>
         <?php endif ?>
@@ -345,13 +288,6 @@ $list = isset($_GET['list']) ? $_GET['list'] : false;
                     </td>
                 </tr>
                 </tbody>
-                <tfoot>
-                <tr>
-                    <td>
-                        (<a href="<?= url(['action' => 'index', 'list' => 'tag']) ?>"><?= $l10n['see_more'] ?></a>)
-                    </td>
-                </tr>
-                </tfoot>
             </table>
         </div>
     </div>
